#1734 (#1735)
* fix bug on error of match deletion

* #1734 fix MatchHighlightsTable.initColumns

* #1595 release_notes.md reload range of matchdetails

Co-authored-by: wsbrenk <zissener-weg-brenk.de>